Bug #40847 Sparse initialization of fragment-log-files can cause future problems
Submitted: 19 Nov 2008 11:06 Modified: 19 Nov 2008 17:40
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version: OS:Any
Assigned to: Jonas Oreland Target Version:

[19 Nov 2008 11:06] Jonas Oreland
Description:
Whdn ndb starts intial, it will initialize the fragment logfiles (redo log)
Currently they are initialized sparsely (i.e not all bytes are written)

This *might* cause a problem, wrt to disk-usage and 
customers has seen spurious io-errors on later writes to redo-log
on some linux-kernel versions, that we suspect might be related to sparse-files

How to repeat:
.

Suggested fix:
This patch introduces a new config variable
InitFragmentLogFiles=full

which will cause the files to be fully initialized during initial (node) start.
[19 Nov 2008 11:11] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/59178

2753 Jonas Oreland	2008-11-19
      ndb - bug#40847 - Add config for full initialization of fragment logfiles
[19 Nov 2008 11:13] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/59180

2754 Jonas Oreland	2008-11-19
      ndb - bug#40847 - Add config for full initialization of fragment logfiles
[19 Nov 2008 12:10] Bugs System
Pushed into 5.1.29-ndb-6.3.19  (revid:jonas@mysql.com-20081119101301-5grwuquno50iyiao)
(version source revid:jonas@mysql.com-20081119101301-5grwuquno50iyiao) (pib:5)
[19 Nov 2008 12:11] Bugs System
Pushed into 5.1.29-ndb-6.4.0  (revid:jonas@mysql.com-20081119101301-5grwuquno50iyiao)
(version source revid:jonas@mysql.com-20081119110117-7stnh2ae76323lw6) (pib:5)
[19 Nov 2008 17:40] Jon Stephens
Documented bugfix in the NDB-6.3.19 changelog as follows:

        When performing an initial start of a data node, fragment
        log files were always created sparsely -- that is, not all bytes were
        written. Now it is possible to override this behavior using the new
        InitFragmentLogFiles configuration parameter.

Documented InitFragmentLogFiles parameter in
http://dev.mysql.com/doc/refman/5.1/en/mysql-cluster-ndbd-definition.html and related
places in Cluster chapter - see http://lists.mysql.com/commits/59250