ndb - bug#40847 - Add config for full initialization of fragment logfiles